Adapting CAS pool to the number of threads (numThreads+5).